--- a/css/main.css
+++ b/css/main.css
@@ -74,3 +74,27 @@ body
 	height: 15px;
 	background-color: #212B31;
 }
+
+.thumbnail-wrapper
+{
+	display: inline-block;
+	margin: -4px -8px -23px -4px;
+	padding: 0px;
+	width: 308px;
+	height: 223px;
+
+	transition: all 0.5s ease;
+}
+
+.thumbnail-wrapper:hover
+{
+	-webkit-filter: blur(2px);
+}
+
+.thumbnail
+{
+	width: 100%;
+
+	border: none;
+	background-color: transparent;
+}
