--- a/css/main.css
+++ b/css/main.css
@@ -2,14 +2,14 @@
 
 body
 {
-	background-color: #EBEBEB;
+	background-color: #2B2B2B;
 }
 
 .header
 {
 	width: 100%;
 	height: 400px;
-	background-color: #5F5F5F;
+	background-color: #2B2B2B;
 }
 
 .logo
@@ -34,7 +34,7 @@ body
 	margin: auto;
 	margin-top: -40px;
 	margin-bottom: 1px;
-	background: #98ADBB;
+	background: transparent;
 	box-shadow: 0px 6px 7px 3px rgba(0,0,0,0.50);
 }
 
