--- a/css/main.css
+++ b/css/main.css
@@ -5,11 +5,50 @@ body
 	background-color: #2B2B2B;
 }
 
+a, a:visited, a:active, a:focus
+{
+	font-family: "Lato", sans-serif;
+	font-size: 20px;
+	font-weight: 300;
+	color: #696969;
+	text-decoration: none;
+	line-height: 34px;
+	padding-left: 10px;
+	padding-right: 10px;
+
+	transition: all 0.5s ease;
+}
+
+a:hover
+{
+	text-decoration: none;
+	color: #FF726D;
+}
+
+.buttons
+{
+	text-align: right;
+}
+
+.toolbar
+{
+	position: fixed;
+	top: 0px;
+	width: 101%;
+	height: 60px;
+	background-color: #1A1A1A;
+
+	z-index: 99; 
+	padding: 12px 30px 0px 30px;
+}
+
 .header
 {
 	width: 100%;
 	height: 400px;
 	background-color: #2B2B2B;
+
+	margin-top: 70px;
 }
 
 .logo
@@ -73,7 +112,7 @@ body
 {
 	width: 100%;
 	height: 15px;
-	background-color: #212B31;
+	background-color: #FF726D;
 }
 
 .thumbnail-wrapper
