--- a/css/main.css
+++ b/css/main.css
@@ -34,12 +34,19 @@ a:hover
 {
 	position: fixed;
 	top: 0px;
-	width: 101%;
+	width: 102%;
 	height: 60px;
 	background-color: #1A1A1A;
 
 	z-index: 99; 
 	padding: 12px 30px 0px 30px;
+}
+
+.audio-hidden
+{
+	position: fixed;
+	top: 40px;
+	width: 100%;
 }
 
 .header
