add logo and password field for login page

--- a/V2/anees-photos/src/app/login/login.component.html
+++ b/V2/anees-photos/src/app/login/login.component.html
@@ -1,5 +1,18 @@
 <div class="login-container">
-    <div class="login-form-container">
-
+    <div class="login-card">
+        <span class="card left">
+            <div class="card-body">
+                <div class="logo-text">
+                    Anees <br/>
+                    Photo <br/>
+                    graphy
+                </div>
+                <div class="password-field-container">
+                    <input class="input-field" type="password" placeholder="password" style="width: 62%;"/>
+                    <button class="btn primary" style="width: 30%;">enter</button>
+                </div>
+            </div>
+        </span>
+        <span class="card right"></span>
     </div>
 </div>
