--- a/V2/anees-photos/src/app/login/login.component.css
+++ b/V2/anees-photos/src/app/login/login.component.css
@@ -1,22 +1,53 @@
 .login-container {
     position: relative;
-    background: white;
+    /* background: white; */
     height: 100%;
-    width: 60%;
+    width: 900px;
     margin: 0 auto;
     padding: 0px 0px;
     resize: both;
     overflow: auto;
 }
-  
-.login-form-container {
-    background: black;
-    color: white;
-    width: 200px;
-    height: 100px;
-    margin: -70px 0 0 -120px;
+
+.login-card {
+    font-size: 0px;
+    width: 100%;
+    height: 450px;
+    margin: -225px 0 0 0px;
     position: absolute;
     top: 50%;
-    left: 50%;
-    padding: 20px;
+}
+
+.card {
+    display: inline-block;
+    width: 50%;
+    height: 100%;
+}
+.card.left{
+    background-color: black;
+    position: absolute;
+}
+
+.card.right{
+    background-color: white;
+    position: absolute;
+    left: 50%;    
+}
+
+.card-body{
+    padding: 75px 40px;
+}
+
+.logo-text{
+    font-family: "Montserrat", sans-serif;
+    font-weight: 700;
+    font-size: 65px;
+    text-transform: uppercase;
+    color: white;
+
+    line-height: 75px;
+}
+
+.password-field-container{
+    padding: 20px 0px;
 }
