--- a/V2/anees-photos/src/app/login/login.component.html
+++ b/V2/anees-photos/src/app/login/login.component.html
@@ -13,6 +13,16 @@
                 </div>
             </div>
         </span>
-        <span class="card right"></span>
+        <span class="card right">
+            <div class="arrow-container">
+
+            </div>
+            <div class="carousel-container">
+                <img src="{{carouselImagePath}}" class="carousel-img"/>
+            </div>
+            <div class="arrow-container right">
+
+            </div>
+        </span>
     </div>
 </div>
