--- a/V2/anees-photos/src/app/login/login.component.html
+++ b/V2/anees-photos/src/app/login/login.component.html
@@ -15,13 +15,17 @@
         </span>
         <span class="card right">
             <div class="arrow-container">
+                <div class="arrow-button left">
 
+                </div>
             </div>
             <div class="carousel-container">
                 <img src="{{carouselImagePath}}" class="carousel-img"/>
             </div>
             <div class="arrow-container right">
-
+                <div class="arrow-button right">
+                    
+                </div>
             </div>
         </span>
     </div>
