--- a/V2/anees-photos/src/assets/global-styles.css
+++ b/V2/anees-photos/src/assets/global-styles.css
@@ -64,10 +64,19 @@ button.btn{
     font-family: "Cardo", serif;
     font-size: 18px;
     letter-spacing: 3px;
-    
+
+    transition: all 0.5s ease;
+}
+
+button.btn:hover{
+    cursor: pointer;
 }
 
 button.btn.primary{
     background-color: white;
     color: black;
+}
+
+button.btn.primary:hover{
+
 }
