--- a/V2/anees-photos/src/assets/global-styles.css
+++ b/V2/anees-photos/src/assets/global-styles.css
@@ -74,7 +74,7 @@ button.btn:hover{
 
 button.btn.primary{
     background-color: white;
-    color: black;
+    color: #171717;
 }
 
 button.btn.primary:hover{
