add image store stuff

--- a/V2/anees-photos/src/app/home/home.component.html
+++ b/V2/anees-photos/src/app/home/home.component.html
@@ -1,3 +1,17 @@
-<p>
-  home works!
-</p>
+<div class="navbar">
+  <div class="logo">
+    Anees Photography
+  </div>
+  <div class="navbar-controls-container">
+    <a class="navbar-link" *ngFor="let folder of folders" (click)="goToGallery(folder.Prefix)">{{folder.Prefix}}</a>
+    <a class="navbar-link contact">contact</a>
+  </div>
+</div>
+<div class="body-container" *ngIf="tnLoaded">
+  <div class="folder-container" *ngFor="let folder of folders" (click)="goToGallery(folder.Prefix)">
+    <div class="folder-header">{{folder.Prefix}}</div>
+    <div class="folder-image-container">
+      <img class="folder-img" src="{{baseUrl}}{{folder.imagePath}}">
+    </div>
+  </div>
+</div>
