--- a/V2/anees-photos/src/app/gallery/gallery.component.css
+++ b/V2/anees-photos/src/app/gallery/gallery.component.css
@@ -5,9 +5,11 @@
     width: 100%;
 
     line-height: 100px;
-    background-color: #ffe200;
+    background-color: #292929;
     padding: 0px 30px;
     font-size: 0px;
+
+    z-index: 99;
     
 }
 
@@ -19,7 +21,7 @@
 
 .back-btn{
     text-decoration: none;
-    color: black;
+    color: white;
 
     font-size: 20px;
     font-family: "Cardo", serif;
