--- a/V2/anees-photos/src/app/home/home.component.css
+++ b/V2/anees-photos/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .navbar{
     display: block;
     position: fixed;
-    background-color: #ffe200;
+    background-color: #292929;
     width: 100%;
     height: 100px;
     line-height: 100px;
@@ -47,7 +47,7 @@
 }
 
 .navbar-link.contact{
-    color: darkred;
+    color: #ff0000;
 }
 
 .body-container{
