--- a/V2/anees-photos/src/assets/global-styles.css
+++ b/V2/anees-photos/src/assets/global-styles.css
@@ -2,7 +2,8 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo:700');
 
 html, body{
-    background-color: #ffe200;
+    background-color: #292929;
+    color: white;
     height: 100%;
 }
 
