Revert "fixed login button alignment"
This reverts commit 978cd8c244e538ab091bfbb52954711ff1e26a2d.

I messed up

--- a/V2/anees-photos/src/app/login/login.component.html
+++ b/V2/anees-photos/src/app/login/login.component.html
@@ -9,8 +9,8 @@
                 </div>
                 <div class="password-field-container">
                     <input class="input-field" [(ngModel)]="password" type="password"
-                    id="password-field" placeholder="password"/>
-                    <button class="btn primary" (click)="verifyPassword()">enter</button>
+                    id="password-field" placeholder="password" style="width: 62%;"/>
+                    <button class="btn primary" style="width: 30%;" (click)="verifyPassword()">enter</button>
                 </div>
             </div>
         </span>
