--- a/V2/anees-photos/src/assets/global-styles.css
+++ b/V2/anees-photos/src/assets/global-styles.css
@@ -2,8 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo:700');
 
 html, body{
-    background-color: #292929;
-    color: white;
+    color: #292929 ;
     height: 100%;
 }
 
