--- a/V2/anees-photos/src/app/login/login.component.html
+++ b/V2/anees-photos/src/app/login/login.component.html
@@ -1,3 +1,4 @@
+<body style = "background-color: #dead59">
 <div class="login-container">
     <div class="login-card">
         <span class="card left">
@@ -27,3 +28,4 @@
         </span>
     </div>
 </div>
+</body>
