fix routing issue on deploy

--- a/V2/anees-photos/src/assets/global-styles.css
+++ b/V2/anees-photos/src/assets/global-styles.css
@@ -2,7 +2,7 @@
 @import url('https://fonts.googleapis.com/css?family=Cardo:700');
 
 html, body{
-    background-color: #292929;
+    background-color: #343a40;
     color: white;
     height: 100%;
 }
