--- a/V2/anees-photos/src/app/gallery/gallery.component.css
+++ b/V2/anees-photos/src/app/gallery/gallery.component.css
@@ -5,7 +5,7 @@
     width: 100%;
 
     line-height: 100px;
-    background-color: #292929;
+    background-color: #343a40;
     padding: 0px 30px;
     font-size: 0px;
 
