--- a/V2/anees-photos/src/app/home/home.component.css
+++ b/V2/anees-photos/src/app/home/home.component.css
@@ -1,7 +1,7 @@
 .navbar{
     display: block;
     position: fixed;
-    background-color: #292929;
+    background-color: #343a40;
     width: 100%;
     height: 100px;
     line-height: 100px;
