--- a/V2/anees-photos/src/app/gallery/gallery.component.html
+++ b/V2/anees-photos/src/app/gallery/gallery.component.html
@@ -1,3 +1,4 @@
+<body>
 <div class="gallery-header">
   <a class="back-btn" routerLink="/home">
     <<<
@@ -10,3 +11,4 @@
     </div>
 
 </div>
+</body>
