--- a/V2/anees-photos/src/app/gallery/gallery.component.css
+++ b/V2/anees-photos/src/app/gallery/gallery.component.css
@@ -8,7 +8,7 @@ html, body{
     width: 100%;
 
     line-height: 100px;
-    background-color: #343a40;
+    background-color: #292929;
     padding: 0px 30px;
     font-size: 0px;
 
@@ -20,7 +20,7 @@ html, body{
     padding: 0px 15px;
     font-family: "Cardo", serif;
     font-size: 20px;
-    color: gray;
+    color: white;
 }
 
 .back-btn{
@@ -70,5 +70,37 @@ html, body{
 }
 
 .gallery-image{
+    width: 100%;
+}
+
+.image-preview-container{
+    position: absolute;
+    top: 0px;
+    left: 0px;
+    /* display: block; */
+    width: 100%;
+    height: 100%;
+
+    background-color: rgba(0,0,0,.5);
+    padding-top: 40px;
+    
+    z-index: 99;
+    display: none;
+}
+
+.image-preview-container.show{
+    display: block;
+}
+
+.image-preview{
+    display: block;
+    width: 70%;
+    height: 300px;
+
+    /* background-color: red; */
+    margin: auto;
+}
+
+.preview-img{
     width: 100%;
 }
