--- a/V2/anees-photos/src/app/gallery/gallery.component.html
+++ b/V2/anees-photos/src/app/gallery/gallery.component.html
@@ -1,4 +1,3 @@
-<body>
 <div class="gallery-header">
   <a class="back-btn" routerLink="/home">
     <<<
@@ -6,9 +5,14 @@
   <span class="gallery-name">{{galleryName}} - {{gallerySize}}</span>
 </div>
 <div class="gallery-container">
-    <div class="image-container" [ngClass]="{'expanded': image.expanded}" *ngFor="let image of imageKeys" (click)="toggleExpand(image)">
+    <div class="image-container" *ngFor="let image of imageKeys" (click)="toggleExpand(image)">
       <img class="gallery-image" src="{{baseUrl}}{{image.Key}}">
     </div>
-
 </div>
-</body>
+
+<div class="image-preview-container show" *ngIf="showModal" (click)="showModal=false">
+  <div class="image-preview">
+    <img class="preview-img" src="{{baseUrl}}{{selectedImage.Key}}" />
+  </div>
+</div>
+
